# godot-flatbuffers

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  options.cmake  preset.deps.json
Notes/: Compile Options.md  DataFlow.canvas  EditorSettings.md  FeatureCanvas.canvas  FileSystemDock.md  FlatBufferBuilder.gd  Godot-FlatBuffers.md  Older Notes.md  ScriptEditor.md  TODO.canvas  Tracker.md  godot-cpp.md  reflection.fbs.canvas
Notes/.obsidian/: app.json  appearance.json  community-plugins.json  workspace.json
Notes/.obsidian/.obsidian/: workspace.json
Notes/.obsidian/plugins/gdscript-syntax-highlighting/: main.js
Notes/Diary/: 2024-04.md  2024-05.md  2024-06.md  2024-09.md
cmake/: PreventInSourceBuilds.cmake  gcc.cmake  godot-cpp-git-tag.cmake  godot-dump.cmake  godot-version.cmake  godotcpp.cmake  msvc.cmake  naming.cmake  options.cmake
project/: bfbs_print.gd  main.gd  main.tscn  pprint.gd  project.godot  reflection.gd  reflection.tscn  reflection_generated.gd  run_tests.gd  smol.tscn  test.gd  test_arrays.gd  test_base.gd  test_build.gd  test_editor_mods.gd  test_monster.gd  test_string_array.gd  test_syntax.fbs
project/addons/flatbuffers/: fbs_syntax_highlighter.gd  flatbuffers.gd  fpl_logo_small.png.import  plugin.cfg  printer.gd  variant.fbs
project/addons/gdflatbuffers/: FlatBuffer.gdf  FlatBufferBuilder.gdf  FlatBuffersHighlighter.gd  FlatBuffersPlugin.gd  fbs_syntax_highlighter.gd  flatbuffers.gd  fpl_logo_small.png.import  plugin.cfg
project/addons/zylann.editor_debugger/: dock.gd  plugin.gd  util.gd
project/fbs_files/: FBTestArrays.fbs  MyTable.fbs  generate.ps1  structs.fbs  tables.fbs  test.fbs  test_vector.fbs  vectors.fbs
project/fbs_files/tests/: FBTestScalarArrays.fbs  FBTestString.fbs
project/tests/: test_scalar_arrays.gd  test_string.gd  test_string_array.gd  test_struct.gd
project/tests/array_fixed/: test.gd  test_schema.fbs
project/tests/includes/: absolute.fbs  includes.fbs  other.fbs  relative.fbs  test_include.gd
project/tests/monster/: Monster.fbs  test_monster.gd
project/tests/reflection/: Reflection.bfbs  Reflection.fbs  test_reflection.gd
project/tests/scalar_arrays/: test.gd
project/tests/simple/: FBTest.simple.fbs  simple.gd
project/tests/string_array/: FBTestStringArray.fbs  test.gd
project/tests/string_field/: test.gd
project/tests/struct_field/: FBTestStruct.fbs  test.gd  test_schema.fbs
project/tests/table_array/: FBTestTableArray.fbs  FBTestTableArray_old.gd  test.gd
project/tests/transform3d/: test.gd  test_transform3d.fbs  transform3d.gd
src/: CMakeLists.txt  entry_point.cpp.in  example.cpp  example.h  flatbuffer.cpp  flatbuffer.h  flatbuffer.hpp  flatbufferarray.cpp  flatbufferarray.h  flatbufferbuilder.cpp  flatbufferbuilder.h  flatbufferbuilder.hpp  gdextension.in  register_types.cpp  register_types.h  register_types.hpp  utils.h  utils.hpp
src/builtin/: godot.fbs  smol.fbs
src/godot_native/: Variant.fbs  color.fbs  strings.fbs  types.md  vectors.fbs
